--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "web-vitals":"^3.1.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13"
